architecture/shared-components/gitlab-ce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ce
  namespace: shared-components
  labels:
    app: gitlab-ce
spec:
  selector:
    app: gitlab-ce
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
    - name: ssh
      port: 22
      targetPort: ssh
